# rustjay-engine

./: .gitignore  404_PORT.md  AGENTS.md  AUDIO_ROUTING.md  AUDIT_ROADMAP.md  Cargo.toml  Cross.toml  PERFORMANCE_REVIEW_PROMPT.md  PERF_FINDINGS.md  PERF_GPU_INPUT_PATH.md  PHASE_B_REVIEW_FINDINGS.md  PHASE_B_ROADMAP.md  PI2_HARDWARE_RENDERING.md  PLAN.md  PROFILE_REPORT_2026-06-01.md  QPLAYER_PORT.md  README.md  RPI_PORT.md  SECURITY_AUDIT_REPORT.md  UNIFIED_MODULATION_ROADMAP.md  VARDA_PORT.md  WAAAVES_PORT.md  _get_env.bat  _test_build.bat  rustjay-new
crates/ledmap-studio/: Cargo.toml
crates/ledmap-studio/src/: main.rs
crates/rustjay-api/: Cargo.toml
crates/rustjay-api/src/: lib.rs  openapi.rs  server.rs  tests.rs  ws.rs
crates/rustjay-api/src/routes/: app.rs  mod.rs  system.rs
crates/rustjay-api/tests/: live.rs
crates/rustjay-audio/: Cargo.toml
crates/rustjay-audio/src/: device.rs  fft.rs  lib.rs  routing.rs
crates/rustjay-control/: Cargo.toml
crates/rustjay-control/src/: lib.rs
crates/rustjay-control/src/midi/: mod.rs  mtc.rs
crates/rustjay-control/src/osc/: mod.rs
crates/rustjay-control/src/web/: control.html  input.html  mod.rs  modulation.html  presets.html  ui.html
crates/rustjay-core/: Cargo.toml
crates/rustjay-core/src/: format.rs  instance.rs  lfo.rs  lib.rs  modulation.rs  params.rs  plugin.rs  routing.rs  state.rs  vertex.rs
crates/rustjay-engine/: Cargo.toml  GUIDE.md  build.rs
crates/rustjay-engine/src/: config.rs  gles2.rs  lib.rs
crates/rustjay-engine/src/app/: commands.rs  events.rs  macos.rs  mod.rs  projection.rs  update.rs
crates/rustjay-gui/: Cargo.toml
crates/rustjay-gui/src/: control_gui.rs  egui_control_gui.rs  egui_renderer.rs  egui_tab.rs  egui_theme.rs  egui_widgets.rs  lib.rs  renderer.rs
crates/rustjay-gui/src/egui_tabs/: audio.rs  control.rs  input.rs  lfo.rs  mod.rs  modulation.rs  output.rs  presets.rs  settings.rs
crates/rustjay-gui/src/tabs/: mod.rs  tab_audio.rs  tab_color.rs  tab_control.rs  tab_input.rs  tab_lfo.rs  tab_modulation.rs  tab_output.rs  tab_params.rs  tab_presets.rs  tab_settings.rs  tab_sync.rs
crates/rustjay-io/: Cargo.toml  build.rs
crates/rustjay-io/src/: lib.rs  ndi_runtime.rs  texture_utils.rs  v4l2_devices.rs
crates/rustjay-io/src/input/: ffmpeg.rs  mod.rs  ndi.rs  spout_input.rs  syphon_input.rs  webcam.rs
crates/rustjay-io/src/output/: led_output.rs  (+6 more)
crates/rustjay-isf/: Cargo.toml
crates/rustjay-isf/shaders/: 00-drip.fs  00-flowerz.fs  00-jumpflow.fs  00-jumpwave311.fs  00-partic.fs  00-refikky.fs  00-vangogh.fs  000.fs  01-cosmic.fs  CRT-Glass.fs  CellularLife.fs  CircuitBoard.fs  CloudFlow.fs  ColorCycle.fs  DiamondPattern.fs  ElectricStorm.fs  GlitchBlocks.fs  InfiniteGrid.fs  LaserBeams.fs  Melty Boi.fs  MoirePattern.fs  NeonPulse.fs  OceanWaves.fs  Pegasus Galaxy.fs  RadialBurst.fs  RetroSun.fs  ST_Clouds.fs  ST_LusciousRipples.fs  ShaderBeam.fs  SpiralVortex.fs  StateOfPlanetFullscreen.fs  StateOfPlanetInfinite.fs  StrobeFlash.fs  TriangleMesh.fs  VoronoiPulse.fs  WarpTunnel.fs  WaterRipples.fs  WaveformScope.fs  gpt.fs  grigM_gs61327.fs  (+1 more)
crates/rustjay-isf/src/: effect.rs  lib.rs  params.rs  transpiler.rs
crates/rustjay-isf/tests/: crt_glass.rs
crates/rustjay-ledmap/: Cargo.toml  DESIGN.md
crates/rustjay-ledmap/examples/: playback.rs
crates/rustjay-ledmap/src/: calibrate.rs  detect.rs  format.rs  lib.rs  sampler.rs  session.rs
crates/rustjay-lighting/: Cargo.toml
crates/rustjay-lighting/examples/: sacn_smoke.rs
crates/rustjay-lighting/src/: artnet.rs  color.rs  dmx.rs  e131.rs  lib.rs  overlap.rs  patch.rs  scan.rs  socket.rs  transport.rs  tx.rs
crates/rustjay-mixer/: Cargo.toml  build.rs
crates/rustjay-mixer/src/: blend.rs  blit.rs  composite.rs  composite.wgsl  crossfade.rs  lib.rs  plugin.rs  preset.rs  sequencer.rs
crates/rustjay-presets/: Cargo.toml
crates/rustjay-presets/src/: lib.rs  presets.rs
crates/rustjay-projection/: Cargo.toml
crates/rustjay-projection/src/: auto_blend.rs  dome.rs  edge_blend.rs  headless.rs  identity.rs  lib.rs  matrix.rs  pixel_sampler.rs  rotation.rs  sample_stage.rs  slicer.rs  stage.rs  surface_import.rs  test_harness.rs  videowall.rs  warp.rs
crates/rustjay-render/: Cargo.toml
crates/rustjay-render/src/: blit.rs  instance.rs  lib.rs  pipeline.rs  plugin_renderer.rs  renderer.rs  texture.rs  uniforms.rs
crates/rustjay-sync/: Cargo.toml  README.md
crates/rustjay-sync/src/: lib.rs  link.rs  prodj.rs
examples/decklink/: Cargo.toml  README.md  build.rs
examples/decklink/src/: decklink_sdk_wrapper.cpp  decklink_source.rs  lib.rs  main.rs
examples/delta/: Cargo.toml
examples/delta-egui/: Cargo.toml
examples/delta-egui/src/: main.rs
examples/delta/src/: main.rs
examples/flux/: Cargo.toml
examples/flux/src/: gles2_renderer.rs  main.rs
examples/isf-example/: Cargo.toml  build.rs
examples/isf-example/shaders/: 00-galax.fs  00-lava.fs  FireEmber.fs  FractalZoom.fs  HexGrid.fs  LiquidMetal.fs  ParticleField.fs  SacredGeometry.fs  TreeRings.fs  gpt-cosmic-wave.fs  gpt-dream.fs
examples/isf-example/src/: isf_effect.rs  isf_tab.rs  isf_transpiler.rs  main.rs
examples/mixer/: Cargo.toml
examples/mixer/.spec/: tasks.md
examples/mixer/src/: main.rs
examples/projection/: Cargo.toml
examples/projection/src/: main.rs
examples/qplayer/: .gitignore  Cargo.toml  package-windows.ps1
examples/shaderglass/: Cargo.toml
examples/shaderglass/src/: chain.rs  main.rs  profile.rs  shader_tab.rs
examples/sputnik/: Cargo.toml
examples/sputnik/src/: main.rs
examples/varda/: Cargo.toml  PARITY.md
examples/varda/src/: api_state.rs  keymap.rs  lib.rs  main.rs
examples/videowall/: Cargo.toml  GEOMETRY_HANDOFF.md  build.rs
examples/videowall/src/: app.rs  main.rs  passthrough.wgsl  ui.rs
examples/videowall/testFiles/: test001.json  test002.json
examples/vp404/: Cargo.toml  build.rs
examples/vp404/src/: api_state.rs  bank.rs  grid_tab.rs  hap_convert.wgsl  live_sampler.rs  main.rs  output_tab.rs  pad.rs  pad_channel.rs  pad_grid.html  passthrough.wgsl  sample.rs  sequencer_tab.rs
(+222 files in other folders)
