[workspace]
members = [
    "crates/rustjay-core",
    "crates/rustjay-audio",
    "crates/rustjay-io",
    "crates/rustjay-control",
    "crates/rustjay-presets",
    "crates/rustjay-gui",
    "crates/rustjay-render",
    "crates/rustjay-mixer",
    "crates/rustjay-engine",
    "crates/rustjay-sync",
    "crates/rustjay-isf",
    "crates/rustjay-api",
    "crates/rustjay-projection",
    "crates/rustjay-lighting",
    "examples/template",
    "examples/delta",
    "examples/waaaves",
    "examples/sputnik",
    "examples/flux",
    "examples/webapp",
    "examples/isf-example",
    "examples/delta-egui",
    "examples/mixer",
    "examples/projection",
    "examples/vjarda",
    "examples/decklink",
    "examples/shaderglass",
    "examples/videowall",
    "examples/vp404",
]
resolver = "3"

[workspace.dependencies]
# Core utilities
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
log         = "0.4"
anyhow      = "1.0"
thiserror   = "2.0"

# GPU / windowing
wgpu        = { version = "29.0", features = ["spirv", "gles"] }
winit       = "0.30"
raw-window-handle = "0.6"
pollster    = "0.4"
bytemuck    = { version = "1.21", features = ["derive"] }
glam        = { version = "0.32", features = ["bytemuck", "serde"] }
image       = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc   = { version = "0.27", default-features = false }
earcutr     = "0.5"
glow        = "0.17"
khronos-egl = { version = "6", features = ["dynamic"] }

# GUI
imgui               = "0.12"
imgui-wgpu          = "0.28"
imgui-winit-support = "0.13"
egui                = "0.34"
egui-wgpu           = "0.34"
egui-winit          = "0.34"

# Audio
cpal    = "0.17"
rustfft = "6.2"
realfft = "3.4"

# Async / threading
tokio     = { version = "1.42", features = ["rt-multi-thread", "sync", "net"] }
crossbeam = "0.8"
socket2   = { version = "0.5", features = ["all"] }

# Control protocols
midir = "0.11"
rosc  = "0.11"

# Web server
axum       = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Config / serialisation helpers
toml    = "1.0"
chrono  = { version = "0.4", features = ["serde"] }
instant = "0.1"
dirs    = "6.0"
rand    = "0.8"
qrcode  = "0.14"
uuid    = { version = "1", features = ["v4"] }

# Workspace-internal crates
rustjay-core    = { path = "crates/rustjay-core", version = "0.1.0" }
rustjay-audio   = { path = "crates/rustjay-audio", version = "0.1.0" }
rustjay-io      = { path = "crates/rustjay-io",      version = "0.1.0", default-features = false }
rustjay-control = { path = "crates/rustjay-control", version = "0.1.0" }
rustjay-presets = { path = "crates/rustjay-presets", version = "0.1.0" }
rustjay-gui     = { path = "crates/rustjay-gui",     version = "0.1.0" }
rustjay-render  = { path = "crates/rustjay-render",  version = "0.1.0" }
rustjay-mixer   = { path = "crates/rustjay-mixer",   version = "0.1.0" }
rustjay-engine  = { path = "crates/rustjay-engine",  version = "0.1.0", default-features = false }
rustjay-isf     = { path = "crates/rustjay-isf",     version = "0.1.0" }
rustjay-api     = { path = "crates/rustjay-api",     version = "0.1.0" }
isf             = { git = "https://github.com/BlueJayLouche/isf.git" }
rustjay-projection = { path = "crates/rustjay-projection", version = "0.1.0" }
rustjay-lighting   = { path = "crates/rustjay-lighting",   version = "0.1.0" }
syphon-core     = "0.2.0"
syphon-metal    = "0.2.0"
syphon-wgpu     = "0.2.0"

[patch.crates-io]
wgpu-hal = { path = "vendor/wgpu-hal" }
nokhwa-bindings-macos = { path = "vendor/nokhwa-bindings-macos" }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "unwind"

[profile.dev]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = 1
