[package]
name = "rustjay-api"
version = "0.1.0"
edition = "2021"
description = "Optional REST/OpenAPI layer for rustjay-engine"
license = "MIT"
repository = "https://github.com/BlueJayLouche/rustjay-engine"
keywords = ["vj", "video", "api", "rest", "openapi"]
categories = ["graphics", "multimedia::video"]

[dependencies]
rustjay-core    = { workspace = true }
rustjay-control = { workspace = true }

axum            = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
log             = { workspace = true }
anyhow          = { workspace = true }
tower-http      = { workspace = true }

utoipa          = { version = "5.5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
json-patch      = "4.2"
futures-util    = "0.3"
rand            = { workspace = true }

[dev-dependencies]
tower = "0.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
