[package]
name = "rustjay-control"
version = "0.1.0"
edition = "2021"
description = "MIDI, OSC, and web remote control for rustjay-engine"
license = "MIT"
repository = "https://github.com/BlueJayLouche/rustjay-engine"
keywords = ["vj", "video", "midi", "osc", "websocket"]
categories = ["graphics", "multimedia::video"]

[features]
mtc = []

[dependencies]
rustjay-core = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
log          = { workspace = true }
anyhow       = { workspace = true }
tokio        = { workspace = true }
midir        = { workspace = true }
rosc         = { workspace = true }
axum         = { workspace = true }
tower-http   = { workspace = true }
rand         = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
