[package]
name = "rustjay-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, traits, and state for rustjay-engine"
license = "MIT"
repository = "https://github.com/BlueJayLouche/rustjay-engine"
keywords = ["vj", "video", "graphics", "wgpu", "real-time"]
categories = ["graphics", "multimedia::video"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
log        = { workspace = true }
anyhow     = { workspace = true }
wgpu       = { workspace = true }
bytemuck   = { workspace = true }
uuid       = { workspace = true, optional = true }

[features]
# `ndi` is a flag feature gating NDI output command variants; opt-in via the
# engine's `ndi` feature (which needs a proprietary SDK to build).
default = []
ndi     = []
modulation = ["dep:uuid"]

link   = []
prodj  = []
