[package]
name = "rustjay-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance cross-platform VJ engine"
license = "MIT"
repository = "https://github.com/BlueJayLouche/rustjay-engine"
keywords = ["vj", "video", "graphics", "wgpu", "real-time"]
categories = ["graphics", "multimedia::video"]

[dependencies]
rustjay-core    = { workspace = true }
rustjay-audio   = { workspace = true }
rustjay-io      = { workspace = true }
rustjay-control = { workspace = true }
rustjay-presets = { workspace = true }
rustjay-gui     = { workspace = true }
rustjay-render  = { workspace = true }
rustjay-sync    = { path = "../rustjay-sync", version = "0.1.0", optional = true }
log             = { workspace = true }
anyhow          = { workspace = true }
wgpu            = { workspace = true }
winit           = { workspace = true }
bytemuck        = { workspace = true }
pollster        = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
dirs            = { workspace = true }
tokio           = { workspace = true }
env_logger      = "0.11"
imgui           = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
default = ["ndi", "webcam"]
ndi     = ["rustjay-io/ndi"]
webcam  = ["rustjay-io/webcam"]
egui    = ["rustjay-gui/egui"]
spout   = []
v4l2    = []
link    = ["rustjay-sync/link", "rustjay-core/link", "rustjay-gui/link"]
prodj   = ["rustjay-sync/prodj", "rustjay-core/prodj", "rustjay-gui/prodj"]
mtc     = ["rustjay-control/mtc", "rustjay-gui/mtc"]

