[package]
name = "rustjay-presets"
version = "0.1.0"
edition = "2021"
description = "Preset save/load for rustjay-engine"
license = "MIT"
repository = "https://github.com/BlueJayLouche/rustjay-engine"
keywords = ["vj", "video", "presets", "settings"]
categories = ["graphics", "config"]

[dependencies]
rustjay-core  = { workspace = true }
rustjay-audio = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
log           = { workspace = true }
anyhow        = { workspace = true }
dirs          = { workspace = true }
