[package]
name = "rustjay-render"
version = "0.1.0"
edition = "2021"

[dependencies]
rustjay-core = { workspace = true }
rustjay-io   = { workspace = true }
log          = { workspace = true }
anyhow       = { workspace = true }
wgpu         = { workspace = true }
winit        = { workspace = true }
bytemuck     = { workspace = true }
image        = { workspace = true }
pollster     = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
syphon-core = { git = "https://github.com/BlueJayLouche/syphon-rs", package = "syphon-core" }
syphon-wgpu = { git = "https://github.com/BlueJayLouche/syphon-rs", package = "syphon-wgpu" }
metal       = "0.33"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"
