[package]
name = "rustjay-sync"
version = "0.1.0"
edition = "2021"
description = "Ableton Link and ProDJ Link sync for rustjay-engine"
license = "MIT"
repository = "https://github.com/BlueJayLouche/rustjay-engine"
keywords = ["vj", "audio", "sync", "ableton-link", "prodj"]
categories = ["multimedia::audio", "network-programming"]

[features]
default = []
link  = ["dep:rusty_link"]
prodj = ["dep:prodjlink-rs"]

[dependencies]
rustjay-core = { path = "../rustjay-core", version = "0.1.0" }
log = { workspace = true }

rusty_link = { version = "0.4", optional = true }
prodjlink-rs = { git = "https://github.com/BlueJayLouche/prodjlink-rs", rev = "e086a448560cf913bb1f2fdfe1bcc7dbd8af1a9f", optional = true }
