[package]
name = "rustjay-sync"
version = "0.1.0"
edition = "2021"
description = "Sync & timing: Ableton Link, ProDJ Link, MTC"
license = "MIT"

[features]
default = ["link"]
link = ["dep:rusty_link"]
prodj = ["dep:prodjlink-rs"]
mtc = []

[dependencies]
rustjay-core = { path = "../rustjay-core", version = "0.1.0" }

log = { workspace = true }

rusty_link = { version = "0.4", optional = true }
prodjlink-rs = { git = "https://github.com/BlueJayLouche/prodjlink-rs", rev = "e086a448560cf913bb1f2fdfe1bcc7dbd8af1a9f", optional = true }
