[package]
name = "delta-egui"
version = "0.1.0"
edition = "2024"
description = "Delta effect with a professional egui interface"

[features]
default = ["egui", "ndi", "webcam"]
ndi     = ["rustjay-engine/ndi"]
webcam  = ["rustjay-engine/webcam"]
egui    = ["rustjay-engine/egui"]

[dependencies]
rustjay-engine = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
egui = { workspace = true }
