[package]
name = "delta"
version = "0.1.0"
edition = "2021"
description = "RGB delay / motion extraction — proves engine generality"

[dependencies]
rustjay-engine = { workspace = true }
bytemuck       = { workspace = true }
serde          = { workspace = true }
anyhow         = { workspace = true }
log            = { workspace = true }
imgui          = { workspace = true }
wgpu           = { workspace = true }
env_logger     = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
default = ["webcam"]
ndi     = ["rustjay-engine/ndi"]
webcam  = ["rustjay-engine/webcam"]
link    = ["rustjay-engine/link"]
prodj   = ["rustjay-engine/prodj"]
mtc     = ["rustjay-engine/mtc"]
