[package]
name = "isf-example"
version = "0.1.0"
edition = "2021"
description = "ISF (Interactive Shader Format) viewer — loads any .fs file via file picker"

[dependencies]
rustjay-engine = { workspace = true }
isf            = { workspace = true }
bytemuck       = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
log            = { workspace = true }
wgpu           = { workspace = true }
imgui          = { workspace = true }
env_logger     = "0.11"
rfd            = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
default = ["ndi", "webcam"]
ndi     = ["rustjay-engine/ndi"]
webcam  = ["rustjay-engine/webcam"]
link    = ["rustjay-engine/link"]
prodj   = ["rustjay-engine/prodj"]
mtc     = ["rustjay-engine/mtc"]
